fix: desktop alignment of tags

--- a/menu-app/src/app/menu-components/menu-item/menu-item.component.scss
+++ b/menu-app/src/app/menu-components/menu-item/menu-item.component.scss
@@ -13,6 +13,13 @@
     margin: 20px 0px 0px 0px;
     height: 80%;
   }
+  .img-description {
+    padding-bottom: 40px;
+  }
+  .tag-container {
+    position: absolute;
+    bottom: 25px;
+  }
 }
 
 .form {
